force-app/main/default/objects/Contact/fields/CRMforNonProfit__Avarage_Donation__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Avarage_Donation__c</fullName>
    <formula>CRMforNonProfit__noac_celkova_hodnota_finacni_dary__c /  CRMforNonProfit__noac_pocet_financnich_daru__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>