force-app/main/default/objects/Contact/fields/CRMforNonProfit__Communication__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Communication__c</fullName>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>Commercial%2FNon Profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>