force-app/main/default/objects/Contact/fields/CRMforNonProfit__Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Contact_Category__c</fullName>
    <label>Contact Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dobrovolník</fullName>
            </value>
            <value>
                <fullName>Zaměstnanec</fullName>
            </value>
            <value>
                <fullName>Dárce</fullName>
            </value>
            <value>
                <fullName>Brigádník</fullName>
            </value>
            <value>
                <fullName>Člen sdružení</fullName>
            </value>
            <value>
                <fullName>Právník</fullName>
            </value>
            <value>
                <fullName>Fotograf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>