force-app/main/default/objects/Contact/fields/CRMforNonProfit__Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>