force-app/main/default/objects/Contact/fields/CRMforNonProfit__datum_posledni_kampane__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__datum_posledni_kampane__c</fullName>
    <label>Datum poslední kampaně</label>
    <type>DateTime</type>
</CustomField>