force-app/main/default/objects/Contact/fields/CRMforNonProfit__DniMeziDary__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DniMeziDary__c</fullName>
    <formula>IF(  CRMforNonProfit__noac_pocet_financnich_daru__c &gt; 0, ( DATEVALUE( CRMforNonProfit__noac_datum_posledniho_financniho_daru__c) -  CRMforNonProfit__First_Transaction_Date__c ) / CRMforNonProfit__noac_pocet_financnich_daru__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Počet dní mezi dary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>