force-app/main/default/objects/Contact/fields/CRMforNonProfit__DniOdPoslednihoDaru__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DniOdPoslednihoDaru__c</fullName>
    <formula>TODAY() - DATEVALUE( CRMforNonProfit__noac_datum_posledniho_financniho_daru__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Počet dní od posledního daru</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>