force-app/main/default/objects/Contact/fields/CRMforNonProfit__Document_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Document_Creation_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Creation Date</label>
    <type>Date</type>
</CustomField>