force-app/main/default/objects/Contact/fields/CRMforNonProfit__Donation_Receipt__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Donation_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Donation Receipt</label>
    <type>Checkbox</type>
</CustomField>