force-app/main/default/objects/Contact/fields/CRMforNonProfit__Donation_Receipt_BCC__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Donation_Receipt_BCC__c</fullName>
    <description>Enter email addresses separate by semicolon ;</description>
    <label>Donation Receipt BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>