force-app/main/default/objects/Contact/fields/CRMforNonProfit__First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__First_Transaction_Date__c</fullName>
    <label>First Transaction Date</label>
    <summarizedField>CRMforNonProfit__Transaction__c.CRMforNonProfit__Transaction_Date__c</summarizedField>
    <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>