force-app/main/default/objects/Contact/fields/CRMforNonProfit__Letter_Title__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Letter_Title__c</fullName>
    <formula>IF( CONTAINS( TEXT( Salutation), &quot;paní&quot;), 
       &quot;Vážená paní&quot;, 
       IF( CONTAINS( TEXT( Salutation), &quot;pan&quot;), 
            &quot;Vážený pane&quot;, 
            Text( Salutation)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Title</label>
    <type>Text</type>
</CustomField>