force-app/main/default/objects/Contact/fields/CRMforNonProfit__Newsletter__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>