force-app/main/default/objects/Contact/fields/CRMforNonProfit__noac_celkova_hodnota_finacni_dary__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__noac_celkova_hodnota_finacni_dary__c</fullName>
    <label>Celková hodnota - dary(Trn. bez Acc)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>