force-app/main/default/objects/Contact/fields/CRMforNonProfit__noac_datum_posledniho_financniho_daru__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__noac_datum_posledniho_financniho_daru__c</fullName>
    <label>Datum posledního daru(Trn. bez Acc)</label>
    <type>DateTime</type>
</CustomField>