force-app/main/default/objects/Contact/fields/CRMforNonProfit__noac_pocet_financnich_daru__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__noac_pocet_financnich_daru__c</fullName>
    <label>Počet finančních darů(Trn. bez Acc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>