force-app/main/default/objects/Contact/fields/CRMforNonProfit__PossiblePermanentDonor__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__PossiblePermanentDonor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possible Permanent Donor</label>
    <type>Checkbox</type>
</CustomField>