force-app/main/default/objects/Contact/fields/CRMforNonProfit__Preffered_Channel__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Preffered_Channel__c</fullName>
    <label>Preferred Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>