force-app/main/default/objects/Contact/fields/CRMforNonProfit__Skip_from_transactions_calculation__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Skip_from_transactions_calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check for the default contact</inlineHelpText>
    <label>Skip from transactions calculation</label>
    <type>Checkbox</type>
</CustomField>