force-app/main/default/objects/Contact/fields/CRMforNonProfit__Title_Prefix__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Title_Prefix__c</fullName>
    <label>Title Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>