force-app/main/default/objects/Contact/fields/CRMforNonProfit__Title_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Title_Suffix__c</fullName>
    <label>Title Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>