force-app/main/default/objects/Contact/fields/CRMforNonProfit__Transaction_Amount_14_36__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Amount_14_36__c</fullName>
    <label>Transaction Amount (14-36)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>