force-app/main/default/objects/Contact/fields/CRMforNonProfit__Transaction_Count_14_36__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Count_14_36__c</fullName>
    <label>Transaction Count (14-36)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>