force-app/main/default/objects/Contact/fields/CRMforNonProfit__Transaction_Count_2008__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transaction_Count_2008__c</fullName>
    <label>Transaction Count 2008</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>