force-app/main/default/objects/Contact/fields/CRMforNonProfit__Transactions_Count__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transactions_Count__c</fullName>
    <label>Transactions Count</label>
    <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>