force-app/main/default/objects/Contact/fields/CRMforNonProfit__Transactions_Total__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Transactions_Total__c</fullName>
    <label>Transactions Total</label>
    <summarizedField>CRMforNonProfit__Transaction__c.CRMforNonProfit__Transaction_Amount__c</summarizedField>
    <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>