force-app/main/default/objects/Contact/fields/CRMforNonProfit__Variable__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Variable__c</fullName>
    <label>Variable</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>