force-app/main/default/objects/Contact/fields/CRMforNonProfit__Vocative__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Vocative__c</fullName>
    <label>Vocative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>