force-app/main/default/objects/Contact/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>