force-app/main/default/objects/Contact/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>